clusters/bale/ollama/ollama.yml
---
# Adding external ingress with auth
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-auth
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
    - host: ollama.etheredge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
